--- a/SheCodes-weather-app.html
+++ b/SheCodes-weather-app.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <footer>
-      <a href=""> Coded by Alica</a>
+      Coded by <a href=""> Alica</a> is
+      <a href=""> open-sourced on Github</a> and
+      <a href="">hosted on netflify</a>
     </footer>
   </body>
 </html>
