--- a/SheCodes-weather-app.html
+++ b/SheCodes-weather-app.html
@@ -6,6 +6,12 @@
     <title>Shecodes weather app</title>
   </head>
   <body>
+    <header>
+      <h1>You doing great</h1>
+    </header>
+    <main>
+      <p>You amazing</p>
+    </main>
     <footer>
       Coded by <a href=""> Alica</a> is
       <a href=""> open-sourced on Github</a> and
