added a form  and paragraph

--- a/SheCodes-weather-app.html
+++ b/SheCodes-weather-app.html
@@ -8,9 +8,15 @@
   <body>
     <header>
       <h1>You doing great</h1>
+      <form>
+        <input type="text" placeholder="Type a city" required />
+        <input type="submit" value="search" />
+      </form>
     </header>
     <main>
       <p>You amazing</p>
+      <p>Miami</p>
+      <p>Tuesday 14:54, broken clouds Humidity: 66%, Wind: 4.63km/h</p>
     </main>
     <footer>
       Coded by <a href=""> Alica</a> is
